View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028400 | Open CASCADE | OCCT:Visualization | public | 2017-01-27 18:03 | 2022-07-14 09:54 |
Reporter | kgv | Assigned To | apn | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028400: Visualization, Graphic3d_MaterialAspect - remove undocumented and unsupported flag EnvReflexion() | ||||
Description | Graphic3d_MaterialAspect::EnvReflexion() is undocumented and implies weird rendering pipeline within TKOpenGl. It is suggested removing this flag. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR28400 has been created by kgv. SHA-1: 3616ca4476abd0df084d7e38b4aaeb3c4fb84be6 Detailed log of new commits: Author: kgv Date: Fri Jan 27 18:16:50 2017 +0300 0028400: Visualization, Graphic3d_MaterialAspect - remove undocumented and unsupported flag EnvReflexion() |
|
Patch is ready for review. |
|
Branch CR28400 reviewed in occt and occt-products without remarks, ready for testing. NOTE: It is mandatory to test the SSP sample operation with this patch! |
|
Dear BugMaster, Branch CR28400 from occt git-repository (and CR28400 from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 3616ca4476abd0df084d7e38b4aaeb3c4fb84be6 SHA-1: d1fa65feba39bac23e1158ce2b176d2422e43515 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 63 (63 on master) Windows: 0 (0 on master) MacOS : 1144 Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 92321534 / 92295997 [+0.03%] Total CPU difference: 19968.24000000023 / 19914.170000000217 [+0.27%] products component : Total MEMORY difference: 31457210 / 31477908 [-0.07%] Total CPU difference: 5606.739999999979 / 5544.959999999981 [+1.11%] Testing on Windows: occt component : Total MEMORY difference: 57621227 / 57618048 [+0.01%] Total CPU difference: 18775.890357498454 / 18683.178963198647 [+0.50%] products component : Total MEMORY difference: 22659012 / 22621210 [+0.17%] Total CPU difference: 5599.687095199988 / 5570.546108399986 [+0.52%] There are no differences in images found by testdiff. |
|
Dear BugMaster, SSP sample is TESTED. |
|
Dear BugMaster, Branch CR28400 from occt git-repository and CR28400 from products git-repository are TESTED. |
|
Branch CR28400 has been deleted by kgv. SHA-1: 3616ca4476abd0df084d7e38b4aaeb3c4fb84be6 |
occt: master 1a0dfc1b 2017-01-27 15:16:50 Committer: apn Details Diff |
0028400: Visualization, Graphic3d_MaterialAspect - remove undocumented and unsupported flag EnvReflexion() |
Affected Issues 0028400 |
|
mod - src/Graphic3d/Graphic3d_MaterialAspect.cxx | Diff File | ||
mod - src/Graphic3d/Graphic3d_MaterialAspect.hxx | Diff File | ||
mod - src/OpenGl/FILES | Diff File | ||
mod - src/OpenGl/OpenGl_Context.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Context.hxx | Diff File | ||
rm - src/OpenGl/OpenGl_NamedStatus.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_View_Redraw.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Workspace.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Workspace.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-01-27 18:03 | kgv | New Issue | |
2017-01-27 18:03 | kgv | Assigned To | => kgv |
2017-01-27 18:16 | git | Note Added: 0063148 | |
2017-01-27 18:17 | kgv | Relationship added | related to 0027925 |
2017-01-27 18:48 | kgv | Note Added: 0063154 | |
2017-01-27 18:48 | kgv | Assigned To | kgv => san |
2017-01-27 18:48 | kgv | Status | new => resolved |
2017-01-27 20:09 |
|
Note Added: 0063159 | |
2017-01-27 20:09 |
|
Assigned To | san => bugmaster |
2017-01-27 20:09 |
|
Status | resolved => reviewed |
2017-01-30 12:20 |
|
Assigned To | bugmaster => apv |
2017-01-30 19:00 |
|
Assigned To | apv => mkv |
2017-02-01 18:32 |
|
Note Added: 0063319 | |
2017-02-01 18:32 |
|
Note Added: 0063320 | |
2017-02-01 18:33 |
|
Note Added: 0063321 | |
2017-02-01 18:33 |
|
Assigned To | mkv => bugmaster |
2017-02-01 18:33 |
|
Status | reviewed => tested |
2017-02-01 18:33 |
|
Test case number | => Not needed |
2017-02-03 16:52 | apn | Changeset attached | => occt master 1a0dfc1b |
2017-02-03 16:52 | apn | Assigned To | bugmaster => apn |
2017-02-03 16:52 | apn | Status | tested => verified |
2017-02-03 16:52 | apn | Resolution | open => fixed |
2017-02-08 11:36 | git | Note Added: 0063630 | |
2017-09-29 16:21 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:24 |
|
Status | verified => closed |