0028400: Visualization, Graphic3d_MaterialAspect - remove undocumented and unsupported flag EnvReflexion()